--- a/views/index.jade
+++ b/views/index.jade
@@ -3,14 +3,8 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
-  p #{temp}
-  table(id="tabel" class="table table-striped table-hover table-hover")
-    thead(class="thead-dark")
-    tr
-    th TEMP
-    tbody
-    tr(id="row")
-    div(id="linechart_material" style="width: 900px; height: 500px")
+  p(style= 'display:none',id='tempTabel') #{temp}
+  div(id="linechart_material" style="width: 900px; height: 500px")
   script(type="text/javascript" src="https://www.gstatic.com/charts/loader.js")
   script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js")
-  //script(type="text/javascript" src="./drawTable.js")
+  script(type="text/javascript" src="./drawTable.js")
