--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,8 +6,7 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.0/flatly/bootstrap.min.css", rel="stylesheet")
     body(style="padding-bottom:10rem;")
-    +nav("ProjectKK", "dropdown_menu")
-      +nav_item( "/", "active" ) Home
-      +nav_item( "support" ) Support
-    block content
-    block support
+      +nav("ProjectKK", "dropdown_menu")
+        +nav_item( "/" ) Home
+        +nav_item( "support" ) Support
+      block content
