--- a/views/login.jade
+++ b/views/login.jade
@@ -1,6 +1,7 @@
 extends ./landing
 
 block content
+    h1= title
     div.col-md-12
         form#formLogin(method="POST", action="/login")
             div.form-group
@@ -11,3 +12,5 @@ block content
                 input#inputPassword.form-control(type="password", name="password")
             div.col-md-offset-5
                 input.btn.btn-success(type="submit", value="Log In")
+script. 
+    
