--- a/views/support.jade
+++ b/views/support.jade
@@ -1,6 +1,19 @@
 extends layout
-block support
+block content
     h1= title
     p heb je vragen voor ons stel ze hier!!
-    input(autocomplete='off',placeholder='ask your question here!')
-    button(type='submit') send
+    form(action="")
+        input(type="text", autocomplete='off',placeholder='ask your question here!', id="m")
+        button(type='submit') send
+    script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js")
+    script(src="socket.io.js")
+    script.
+        $(function () {
+            var socket = io();
+            $('form').submit(function(e){
+                e.preventDefault(); // prevents page reloading
+                socket.emit('chat message', $('#m').val());
+                $('#m').val('');
+                return false;
+            });
+        });
